<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blue"
    tools:context=".features.main.MainFragment">

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:src="@drawable/bg_wall_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="126dp"
        android:fontFamily="@font/notosanscjkkr_bold"
        android:text="여기가 바로\n북극인가요?"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_live_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:background="@drawable/shape_rect_white_4r"
        android:fontFamily="@font/notosanscjkkr_medium"
        android:paddingStart="13dp"
        android:paddingTop="3dp"
        android:paddingEnd="13dp"
        android:paddingBottom="3dp"
        android:text="@string/live_fee"
        android:textColor="@color/bg_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/sfuitext_bold"
        android:text="30,970"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_live_fee" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="@font/notosanscjkkr_bold"
        android:text="@string/won"
        android:textColor="@color/blue_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_fee"
        app:layout_constraintStart_toEndOf="@id/tv_fee"
        app:layout_constraintTop_toTopOf="@id/tv_fee" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="102dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fee" />

    <TextView
        android:id="@+id/tv_using_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/notosanscjkkr_medium"
        android:text="@string/using_time"
        android:textColor="@color/blue_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_using_time_value"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/view_divider"
        app:layout_constraintTop_toBottomOf="@id/view_divider" />

    <TextView
        android:id="@+id/tv_using_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/notosanscjkkr_bold"
        android:text="13:20"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_using_time"
        app:layout_constraintEnd_toStartOf="@id/tv_minute"
        app:layout_constraintStart_toEndOf="@id/tv_using_time"
        app:layout_constraintTop_toTopOf="@id/tv_using_time" />

    <TextView
        android:id="@+id/tv_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanscjkkr_bold"
        android:text="@string/minute"
        android:textColor="@color/blue_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_using_time"
        app:layout_constraintEnd_toEndOf="@id/view_divider"
        app:layout_constraintStart_toEndOf="@id/tv_using_time_value"
        app:layout_constraintTop_toTopOf="@id/tv_using_time" />

    <TextView
        android:id="@+id/tv_input_using_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:fontFamily="@font/notosanscjkkr_medium"
        android:text="@string/input_using_time"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toStartOf="@id/et_using_time"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_using_time" />

    <TextView
        android:id="@+id/et_using_time"
        android:layout_width="117dp"
        android:layout_height="44dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_rect_white_border_8r"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/tv_input_using_time"
        app:layout_constraintEnd_toStartOf="@id/tv_minute2"
        app:layout_constraintStart_toEndOf="@id/tv_input_using_time"
        app:layout_constraintTop_toTopOf="@id/tv_input_using_time" />

    <TextView
        android:id="@+id/tv_minute2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanscjkkr_bold"
        android:text="@string/minute"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_input_using_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_using_time"
        app:layout_constraintTop_toTopOf="@id/tv_input_using_time" />

    <TextView
        android:id="@+id/tv_go_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanscjkkr_medium"
        android:text="@string/go_calendar"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/image_arrow_down"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>