<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="11dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_live_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosanscjkkr_bold"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfuitext_bold"
                android:includeFontPadding="false"
                android:shadowColor="@color/shadowColor"
                android:shadowDx="0.0"
                android:shadowDy="4.0"
                android:shadowRadius="3.0"
                android:text="30,970"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_won"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/notosanscjkkr_regular"
                android:shadowColor="@color/shadowColor"
                android:shadowDx="0.0"
                android:shadowDy="4.0"
                android:layout_gravity="center_vertical"
                android:shadowRadius="3.0"
                android:text="@string/won"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <ImageView
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:src="@drawable/image_yellow"
                android:layout_marginStart="-2dp"
                android:layout_gravity="bottom"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dividor"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="11dp"
            android:alpha="0.1"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/ll_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_using_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanscjkkr_bold"
                android:shadowColor="@color/shadowColor"
                android:shadowDx="0.0"
                android:shadowDy="4.0"
                android:shadowRadius="3.0"
                android:text="@string/using_time"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_total_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/notosanscjkkr_bold"
                    android:shadowColor="@color/shadowColor"
                    android:shadowDx="0.0"
                    android:shadowDy="4.0"
                    android:shadowRadius="3.0"
                    android:text="12"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:fontFamily="@font/notosanscjkkr_regular"
                    android:shadowColor="@color/shadowColor"
                    android:shadowDx="0.0"
                    android:shadowDy="4.0"
                    android:shadowRadius="3.0"
                    android:text="시간"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/tv_total_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/notosanscjkkr_bold"
                    android:shadowColor="@color/shadowColor"
                    android:shadowDx="0.0"
                    android:shadowDy="4.0"
                    android:shadowRadius="3.0"
                    android:text="20"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:fontFamily="@font/notosanscjkkr_regular"
                    android:shadowColor="@color/shadowColor"
                    android:shadowDx="0.0"
                    android:shadowDy="4.0"
                    android:shadowRadius="3.0"
                    android:text="@string/minute"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <ImageView
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:src="@drawable/image_yellow"
                    android:layout_marginStart="-2dp"
                    android:layout_gravity="bottom"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>